[gd_scene load_steps=4 format=2]

[ext_resource path="res://fire_handle/fire_handle.png" type="Texture" id=1]
[ext_resource path="res://fire_handle/fire_handle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 256 )

[node name="FireHandle" type="Area2D"]
priority = 1.0
script = ExtResource( 2 )

[node name="FireHandle" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 2 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_FireHandle_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_FireHandle_mouse_exited"]
